--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
     "axios": "^0.27.2",
+    "chrome-aws-lambda": "^10.1.0",
     "cookies-next": "^2.1.1",
     "next": "12.1.6",
+    "playwright-core": "^1.27.1",
     "puppeteer": "^19.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
